manifest/objects/texcellency__DHCFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the mapping between source entity in DefinitiveHC database onto standard or custom fields in one of the supported standard objects in Salesforce.</description>
    <fields>
        <fullName>texcellency__Destination__c</fullName>
        <description>Destination field of the standard object to which the source value is mapped.</description>
        <inlineHelpText>Destination field of the standard object to which the source value is mapped.</inlineHelpText>
        <label>Destination</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables or disables a mapping.</description>
        <inlineHelpText>Enables or disables a mapping.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency__Mask__c</fullName>
        <description>Mask value controls when a mapping is applied to a Standard Object Record.</description>
        <inlineHelpText>Mapping applicability is controlled by certain flags. Currently supported:
Skip new  = 1
Skip updating = 2
Skip if Source != DHC = 4
Skip if Source != DHC &amp;&amp; Field Not Empty = 8
Turn off multiple flags by setting the Mask to sum of indiv. values</inlineHelpText>
        <label>Mask</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>texcellency__Source__c</fullName>
        <description>Source field from the API entity which provides the value for the destination field.</description>
        <inlineHelpText>Source field from the API entity which provides the value for the destination field.</inlineHelpText>
        <label>Source</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__StdObjType__c</fullName>
        <defaultValue>&quot;A&quot;</defaultValue>
        <description>Indicates the standard object type to which this mapping applies to.</description>
        <inlineHelpText>Indicates the standard object type to which this mapping applies to.
A - Account
C - Contact
L - Lead
O - Opportunity.</inlineHelpText>
        <label>Standard Object Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DHC Field Mapping</label>
</CustomObject>